nix/modules/kubernetes/opa/deployment.yaml
############################################################
# OPA admission controller deployment for injecting policy.
############################################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: admission-controller
  namespace: policy
  name: admission-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: admission-controller
      name: admission-controller
    spec:
      containers:
        - image: openpolicyagent/opa:0.10.3
          name: opa
          ports:
            - containerPort: 443
          args:
            - "run"
            - "--server"
            - "--tls-cert-file=/certs/tls.crt"
            - "--tls-private-key-file=/certs/tls.key"
            - "--addr=0.0.0.0:443"
            - "/policies/inject.rego"
          volumeMounts:
            - readOnly: true
              mountPath: /certs
              name: server-cert
            - readOnly: true
              mountPath: /policies
              name: inject-policy
      volumes:
        - name: inject-policy
          configMap:
            name: inject-policy
        - name: server-cert
          secret:
            secretName: server-cert
