nix/modules/kubernetes/opa/ac-policy.yaml
############################################################
# Service to expose OPA admission controller (required by Kubernetes.)
############################################################
apiVersion: v1
kind: Service
metadata:
  name: admission-controller
  namespace: policy
  labels:
    app: admission-controller
spec:
  ports:
    - port: 443
      name: http
  selector:
    app: admission-controller
