nix/modules/kubernetes/opa/webhook.yaml
############################################################
# OPA admission controller configuration.
############################################################
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: policy-admission-controller
webhooks:
  - name: istio.openpolicyagent.org
    clientConfig:
      service:
        name: admission-controller
        namespace: policy
        path: "/v0/data/istio/inject"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyRENDQVpRQ0NRQ3dKemhjUk5xSHZ6QU5CZ2txaGtpRzl3MEJBUXNGQURBWE1SVXdFd1lEVlFRRERBeGgKWkcxcGMzTnBiMjVmWTJFd0lCY05NVGd3TXpFd01ERTBPVFEzV2hnUE1qSTVNVEV5TWpRd01UUTVORGRhTUJjeApGVEFUQmdOVkJBTU1ER0ZrYldsemMybHZibDlqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU5GOS9jV3pMeVRxSjVoWVJON0R4V1VjVVU4NFpiU3pHRmc2dnROMmZyN0c0eVRaM1JRUnJEWU4KdHV3M3RnVi9raGxZN3RZWVhjS1RSZWt4bis3V0dyWUJHMzM4WWpxU084ekF1R3NBdndIS2J4YjFBeVNtb0hOcQpSY29PT1FkQXpa [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        policy-injection: enabled
    failurePolicy: Fail
